--- a/index.html
+++ b/index.html
@@ -11,3 +11,24 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
+<!-- Animation Scroll-->
+<script src="https://cdn.tailwindcss.com"></script>
+<script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        animation: {
+          'infinite-scroll': 'infinite-scroll 25s linear infinite',
+        },
+        keyframes: {
+          'infinite-scroll': {
+            from: { transform: 'translateX(0)' },
+            to: { transform: 'translateX(-100%)' },
+          },
+        },
+      },
+    },
+  }
+</script>
+
